Add retry/error handling for multiplayer socket connection

--- a/multiplayer.html
+++ b/multiplayer.html
@@ -70,7 +70,11 @@
     button.secondary { background: #434368; }
     button.warning { background: var(--danger); }
 
+    button[disabled] { opacity: 0.55; cursor: not-allowed; }
+
     .hidden { display: none; }
+
+    #retry-connect-btn { display: none; }
 
     .badge {
       display: inline-block;
@@ -137,16 +141,18 @@
         <div>
           <h2>Create Lobby</h2>
           <input id="host-name" placeholder="Your name" maxlength="20" />
-          <button id="create-btn">Create Lobby</button>
+          <button id="create-btn" disabled>Create Lobby</button>
         </div>
         <div>
           <h2>Join Lobby</h2>
           <input id="join-name" placeholder="Your name" maxlength="20" />
           <input id="join-code" placeholder="Lobby code" maxlength="6" />
-          <button id="join-btn" class="secondary">Join Lobby</button>
+          <button id="join-btn" class="secondary" disabled>Join Lobby</button>
         </div>
       </div>
       <div id="entry-error" class="result"></div>
+      <div id="socket-status" class="small">Connecting to server...</div>
+      <button id="retry-connect-btn" class="secondary">Retry Connection</button>
     </div>
 
     <div id="lobby" class="hidden">
@@ -171,7 +177,7 @@
 
   <script src="/socket.io/socket.io.js"></script>
   <script>
-    const socket = io();
+    const socket = io({ autoConnect: false, reconnectionAttempts: 4, timeout: 5000 });
     let myId = null;
     let lobbyState = null;
 
@@ -188,6 +194,57 @@
     const startBtn = document.getElementById('start-btn');
     const goGameBtn = document.getElementById('go-game-btn');
     const statusText = document.getElementById('status-text');
+    const createBtn = document.getElementById('create-btn');
+    const joinBtn = document.getElementById('join-btn');
+    const socketStatus = document.getElementById('socket-status');
+    const retryConnectBtn = document.getElementById('retry-connect-btn');
+    let connectWaitTimer = null;
+
+    function updateConnectionUI() {
+      const connected = socket.connected;
+      createBtn.disabled = !connected;
+      joinBtn.disabled = !connected;
+      retryConnectBtn.style.display = connected ? 'none' : 'inline-block';
+      socketStatus.textContent = connected
+        ? 'Connected.'
+        : 'Connecting to server... If this takes too long, tap Retry Connection.';
+    }
+
+    function startConnectWatchdog() {
+      if (connectWaitTimer) {
+        clearTimeout(connectWaitTimer);
+      }
+      connectWaitTimer = setTimeout(() => {
+        if (!socket.connected) {
+          socketStatus.textContent = 'Unable to reach server. Tap Retry Connection.';
+          showError('Could not connect to realtime server. Please retry.');
+          createBtn.disabled = true;
+          joinBtn.disabled = true;
+          retryConnectBtn.style.display = 'inline-block';
+        }
+      }, 5000);
+    }
+
+    function emitWithAck(event, payload, callback) {
+      if (!socket.connected) {
+        showError('Still connecting to server. Please wait a moment.');
+        return;
+      }
+
+      let settled = false;
+      const timeoutId = setTimeout(() => {
+        if (settled) return;
+        settled = true;
+        showError('Server did not respond. Please retry.');
+      }, 6000);
+
+      socket.emit(event, payload, (response) => {
+        if (settled) return;
+        settled = true;
+        clearTimeout(timeoutId);
+        callback(response);
+      });
+    }
 
     function storeSession(code, playerKey) {
       localStorage.setItem('jinxSession', JSON.stringify({ code, playerKey }));
@@ -274,6 +331,8 @@
 
     socket.on('connect', () => {
       myId = socket.id;
+      if (connectWaitTimer) clearTimeout(connectWaitTimer);
+      updateConnectionUI();
       const session = getSession();
       if (session?.code && session?.playerKey) {
         socket.emit('reconnect_lobby', session, (response) => {
@@ -282,6 +341,17 @@
           render();
         });
       }
+    });
+
+    socket.on('disconnect', () => {
+      updateConnectionUI();
+      startConnectWatchdog();
+    });
+
+    socket.on('connect_error', () => {
+      socketStatus.textContent = 'Unable to reach server. Tap Retry Connection.';
+      showError('Realtime server unavailable. Check internet and retry.');
+      retryConnectBtn.style.display = 'inline-block';
     });
 
     socket.on('lobby_state', (state) => {
@@ -296,9 +366,9 @@
       }
     });
 
-    document.getElementById('create-btn').addEventListener('click', () => {
+    createBtn.addEventListener('click', () => {
       const name = document.getElementById('host-name').value.trim();
-      socket.emit('create_lobby', { name }, (response) => {
+      emitWithAck('create_lobby', { name }, (response) => {
         if (!response.ok) {
           showError(response.error);
           return;
@@ -310,10 +380,10 @@
       });
     });
 
-    document.getElementById('join-btn').addEventListener('click', () => {
+    joinBtn.addEventListener('click', () => {
       const name = document.getElementById('join-name').value.trim();
       const code = document.getElementById('join-code').value.trim().toUpperCase();
-      socket.emit('join_lobby', { name, code }, (response) => {
+      emitWithAck('join_lobby', { name, code }, (response) => {
         if (!response.ok) {
           showError(response.error);
           return;
@@ -327,6 +397,16 @@
 
     startBtn.addEventListener('click', () => socket.emit('start_game'));
     goGameBtn.addEventListener('click', openGamePage);
+    retryConnectBtn.addEventListener('click', () => {
+      showError('');
+      updateConnectionUI();
+      socket.connect();
+      startConnectWatchdog();
+    });
+
+    updateConnectionUI();
+    socket.connect();
+    startConnectWatchdog();
   </script>
 </body>
 </html>
