Add retry connection button and improve UI feedback

--- a/multiplayer.html
+++ b/multiplayer.html
@@ -152,6 +152,7 @@
       </div>
       <div id="entry-error" class="result"></div>
       <div id="socket-status" class="small">Connecting to server...</div>
+      <button id="retry-connect-btn" class="secondary">Retry Connection</button>
     </div>
 
     <div id="lobby" class="hidden">
@@ -196,12 +197,32 @@
     const createBtn = document.getElementById('create-btn');
     const joinBtn = document.getElementById('join-btn');
     const socketStatus = document.getElementById('socket-status');
+    const retryConnectBtn = document.getElementById('retry-connect-btn');
+    let connectWaitTimer = null;
 
     function updateConnectionUI() {
       const connected = socket.connected;
       createBtn.disabled = !connected;
       joinBtn.disabled = !connected;
-      socketStatus.textContent = connected ? 'Connected.' : 'Connecting to server...';
+      retryConnectBtn.style.display = connected ? 'none' : 'inline-block';
+      socketStatus.textContent = connected
+        ? 'Connected.'
+        : 'Connecting to server... If this takes too long, tap Retry Connection.';
+    }
+
+    function startConnectWatchdog() {
+      if (connectWaitTimer) {
+        clearTimeout(connectWaitTimer);
+      }
+      connectWaitTimer = setTimeout(() => {
+        if (!socket.connected) {
+          socketStatus.textContent = 'Unable to reach server. Tap Retry Connection.';
+          showError('Could not connect to realtime server. Please retry.');
+          createBtn.disabled = true;
+          joinBtn.disabled = true;
+          retryConnectBtn.style.display = 'inline-block';
+        }
+      }, 5000);
     }
 
     function emitWithAck(event, payload, callback) {
@@ -310,6 +331,7 @@
 
     socket.on('connect', () => {
       myId = socket.id;
+      if (connectWaitTimer) clearTimeout(connectWaitTimer);
       updateConnectionUI();
       const session = getSession();
       if (session?.code && session?.playerKey) {
@@ -323,6 +345,13 @@
 
     socket.on('disconnect', () => {
       updateConnectionUI();
+      startConnectWatchdog();
+    });
+
+    socket.on('connect_error', () => {
+      socketStatus.textContent = 'Unable to reach server. Tap Retry Connection.';
+      showError('Realtime server unavailable. Check internet and retry.');
+      retryConnectBtn.style.display = 'inline-block';
     });
 
     socket.on('lobby_state', (state) => {
@@ -368,7 +397,16 @@
 
     startBtn.addEventListener('click', () => socket.emit('start_game'));
     goGameBtn.addEventListener('click', openGamePage);
+    retryConnectBtn.addEventListener('click', () => {
+      showError('');
+      updateConnectionUI();
+      socket.connect();
+      startConnectWatchdog();
+    });
+
     updateConnectionUI();
+    socket.connect();
+    startConnectWatchdog();
   </script>
 </body>
 </html>
